Wed Feb  6 23:34:10 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxsl.py python/libxslt-python-api.xml python/libxslt.c
	  python/libxsltclass.txt: added libxslt_xsltCleanup() added parameters
	  to libxslt_xsltApplyStylesheet() removed the memleaks left and
	  fixed an import order.
	* python/tests/basic.py python/tests/extfunc.py: updated the tests

Wed Feb  6 19:46:09 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxlst.c python/libxslt-python-api.xml 
	  python/libxsltclass.txt: plugged the extension of the engine
	  with python defined functions
	* python/tests/Makefile.am python/tests/extfunc.py: added a
	  basic test, still a memleak, cleanup function needed.

Wed Feb  6 13:49:55 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in python/Makefile.am python/libxsl.py: the
	  spec file will now build libxslt-python, fought with shared
	  and other crazyness, seems to work now :-)
	* doc/libxslt-api.xml: regenerated

Wed Feb  6 11:29:31 CET 2002 Daniel Veillard <daniel@veillard.com>

	* Makefile.am configure.in tests/Makefile.am tests/*/Makefile.am
	  tests/*/*/Makefile.am: refactored make tests, make all now don't
	  run the test suite
	* python/Makefile.am: added tests
	* python/tests/basic.py python/tests/Makefile.am: added the first
	  basic test, memory debug included

Wed Feb  6 00:20:57 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in python/Makefile.am: attempst to tweak to get
	  full memory debug...
	* python/generator.py python/libxsl.py python/libxslt-python-api.xml
	  python/libxslt.c python/libxslt_wrap.h python/libxsltclass.txt:
	  the basic API starts to work
	* python/tests/test.*: first basic test
	* libxslt/xsltutils.c: fixed a comment

Tue Feb  5 17:35:00 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/Makefile.am: do not install outside of prefix,
	  make sure the API get shipped.

Mon Feb  4 19:47:32 CET 2002 Daniel Veillard <daniel@veillard.com>
